# CSCoursework2025

./: .gitignore  analyze.py  clean_data.py  download_data.py  main.py  pyproject.toml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  bacon.toml  compose.yaml
backend/.sqlx/: query-6d0b01bff5a1b030724e86284eed3b58e1100a442d87df7d7368f5e9a0638f38.json  query-959eee10839a004bc75be9323a7689ccc847b813da3926cfed9faba27fa760fe.json  query-cebeed72d5687b3ae67649c3b00de7717a43fc055f446fe0d629700cb68ba20e.json  query-d4414f5d1c0aa3b4a3546d72b2821f583cc23f5f9ca56f0908bd285216ae56e0.json  query-fc5cb0a260f95cb25eb91e15f62fa027476766bd12dfe2087163a69e50c8d160.json
backend/content/partials/: common_head.html  footer.html  footer_non_redacted.html  header.html
backend/content/static/: form.js  glacier_mass_temp_change_combined.json  graphs_combined.json  monthly_temp_plot.json  plot_data.js  style.css  theme.js  yearly_temp_plot.json
backend/content/template_data/: LICENSE.txt  LICENSE_not_redacted.txt  color_temp_diff_to_mass.txt  glacier_mass_temp_change_combined.html  monthly_temp_plot.html  temp_warning.txt  yearly_temp_plot.html
backend/migrations/: 20250303002513_create_replies.down.sql  20250303002513_create_replies.up.sql
backend/src/: main.rs  models.rs  state.rs  template.rs  websocket.rs
backend/templates/: data.html  index.html  recommendations.html  survey.html
brief/: CS.typ  gantt.yaml  templates  view.html
brief/slides/: Global warming.md
clean_data/: glacier_mass_changes.csv  temperatures.csv
static/: index.html
templates/: index.html
(+7 files in other folders)
