[package]
name = "cs2025_coursework_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["http1", "http2", "macros", "tokio", "ws"] }
tokio = { version = "1.43.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
  "io-util",
  "time",
  "mio",
  "tracing",
  "fs",
] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
dotenvy = "0.15.7"
serde = { version = "1.0.218", features = ["derive", "alloc"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "chrono"] }
futures = "0.3.31"
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3.19", features = ["tracing", "time"] }
tracing = { version = "0.1.41", features = ["release_max_level_warn"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
handlebars = "6.3.1"
